# neural-radiance-fields

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  analytic_renderer.py  convert_to_mp4.py  evaluate.py  pyproject.toml  train.py  volumetric_renderer.py
data/: dataloader.py
model/: mlp.py
renderer/: analytic_renderer.py  volumetric_renderer.py
renderer/cameras/: base.py  pinhole.py
renderer/core/: math_utils.py  ray.py
renderer/geometry/: base.py  plane.py  sphere.py
renderer/lighting/: light.py
renderer/materials/: base.py  phong.py
renderer/renderer/: base.py  raytracer.py  volumetric.py
renderer/scene/: scene.py
src/gs/: data_loading.py  gaussian.py  project_gaussian_to_2d.py
src/nerf/: __init__.py
src/nerf/data/: __init__.py  dataloader.py
src/nerf/model/: __init__.py  mlp.py
src/nerf/renderer/: analytic_renderer.py  volumetric_renderer.py
src/nerf/renderer/cameras/: base.py  pinhole.py
src/nerf/renderer/core/: math_utils.py  ray.py
src/nerf/renderer/geometry/: base.py  plane.py  sphere.py
src/nerf/renderer/lighting/: light.py
src/nerf/renderer/materials/: base.py  phong.py
src/nerf/renderer/renderer/: base.py  raytracer.py  volumetric.py
src/nerf/renderer/scene/: scene.py
src/nerf/utils/: __init__.py  path_utils.py
